--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -16,9 +16,12 @@ jobs:
       uses: actions/setup-ruby@v1
       with:
         ruby-version: 2.6.x
-    - name: Build and test with Rake
+    - name: Get build dependencies
       run: |
+        sudo apt-get update
         sudo apt-get install libsqlite3-dev
         gem install bundler
         bundle install --jobs 4 --retry 3
+    - name: Build and test with Rake
+      run: |
         bundle exec rake
