Add github workflow for rubocop linter

--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -25,3 +25,6 @@ jobs:
     - name: Build and test with Rake
       run: |
         bundle exec rake
+    - name: Run rubocop
+      run: |
+        bundle exec rubocop
